--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="placeholder.jpg" alt="Logo">
+      <img src="https://ankug95.github.io/SARMAYACARE/images/SARMAYA LOGO.jpg" alt="Logo">
       <h1>SARMAYA</h1>
     </div>
     <nav>
