--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     header {
       background-color: #00796B;
@@ -52,50 +55,50 @@
       color: white;
       transform: scale(1.05);
     }
+    main {
+      flex: 1;
+    }
     #products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-      padding: 30px 50px;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      padding: 30px 40px 50px;
     }
     .product {
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      overflow: hidden;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       transition: transform 0.3s;
+      text-align: center;
     }
     .product:hover {
-      transform: translateY(-5px);
+      transform: translateY(-4px);
     }
     .product img {
       width: 100%;
-      height: 250px;
+      height: 200px;
       object-fit: contain;
       padding: 1rem;
       cursor: pointer;
     }
     .product-info {
-      padding: 1rem 1.5rem 1.5rem;
-      text-align: center;
+      padding: 1rem;
     }
     .product-info h3 {
-      margin: 0 0 0.5rem;
-      font-size: 1.2rem;
-      color: #333;
+      margin-bottom: 0.5rem;
+      font-size: 1.1rem;
+      color: #222;
     }
     .product-info p {
       margin: 0.25rem 0;
-      color: #555;
+      color: #666;
     }
     footer {
       text-align: center;
       padding: 1rem;
       background: #00796B;
       color: white;
-      margin-top: 50px;
     }
-
     .modal {
       display: none;
       position: fixed;
