--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <img src="${imageUrl}" alt="${p['Product Name']}" loading="lazy" onclick="openPreview('${imageUrl}')" onerror="this.src='placeholder.jpg'">
           <div class="product-info">
             <h3>${p['Product Name']}</h3>
-            <p>Quantity: ${p['Quantity Available']}</p>
+            <p>Price: ${p['Quantity Available']}</p>
             <p>Size: ${p['ML']}</p>
           </div>
         `;
